crates/wac-parser/tests/resolution/fail/duplicate-func-param.wac
package test:comp;

type f = func(x: u32, x: string);